# sleep-efficiency

./: .gitignore  Dockerfile  Dockerfile.lambda  README.md  deploy_lambda.sh  pyproject.toml
data/: sleep-efficiency_cleaned.csv
notebook/: FCN.onnx  FCN.onnx.data  FCN_100_0.0119.pth  FCN_200_0.0072.pth  FCN_300_0.0054.pth  FCN_700_0.0044.pth  FCN_800_0.0043.pth  FCN_900_0.0041.pth  notebook.ipynb  pyproject.toml
src/: invoke.py  lambda_function.py  predict.py  serve.py  train.py
